--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,7 @@
----
 name: theses
-version: 2
-...
+version: 1
+handle:
+
+- compress: if ( out_header["Content-type"] ~ "application/javascript" ) compress
+- compress: if ( out_header["Content-type"] ~ "text/css" ) compress
+- compress: if ( out_header["Content-type"] ~ "text/javascript" ) compress
